--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "type": "commonjs",
-     "dependencies": {
-    "express": "^4.18.2",
-    "express-ws": "^5.0.2",
-    "redis": "^4.6.4"
-  }
+    "dependencies": {
+        "@wll8/express-ws": "^1.0.5",
+        "express": "^4.18.2",
+        "redis": "^4.6.4"
+    }
 }
